test/negative/208_annot_type_mismatch.fx
// expect: type
val a: int = "hello"
println(a)
